# open-webui-developer-toolkit

./: .gitmodules  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml  test.py
.github/workflows/: ci.yml  clone-open-webui-repo.yml  deploy-open-webui-extensions.yml  deploy-plugins.yml  deploy.yml  update-open-webui.yml
.scripts/: publish_to_webui.py
.tests/: conftest.py  test_create_image_filter.py  test_dynamic_title_pipe.py  test_input_inspector.py  test_message_persistence_probe.py  test_metadata_persistence.py  test_multi_message_bubble_example.py  test_openai_pipeline.py  test_openai_responses_api_pipeline.py  test_openai_responses_manifold.py  test_pipeline.py  test_publish.py  test_save_base64_image.py  test_web_search_toggle_filter.py
docs/: README.md  chat_persistence_notes.md  chat_title.md  citations.md  custom_pipes.md  events.md  file_handler.md  file_storage.md  image_compression.md  image_generation.md  instruction_injection_valves.md  message-execution-path.md  middleware.md  openai_responses_api_pipeline_plan.md  pipe_input.md  responses_file_upload.md  responses_manifold.md  stream_vs_standard_response_plan.md
docs/utils/: README.md  access_control.md  auth.md  chat.md  code_interpreter.md  filter.md  misc.md  models.md  oauth.md  payload.md  plugin.md  redis.md  task.md  tools.md
examples/filters/: filter_template.py  stream_logging_filter.py  turn_limit_filter.py
examples/pipes/: citations_test.py  openai_chat_pipeline.py  pipe_template.py  status_stream_pipe.py
examples/tools/: basic_tools.py  docstring_tools.py  event_emitter_example.py  tool_template.py  universal_example.py
functions/: FUNCTIONS_GUIDE.md  README.md
functions/filters/: AGENTS.md  FILTERS_GUIDE.md  README.md  create_image_filter.py  create_image_toggle_filter.py  debug_toggle_filter.py  reason_filter.py  reason_toggle_filter.py  web_search_toggle_filter.py
functions/filters/create_image_toggle_filter/: CHANGELOG.md  README.md  create_image_toggle_filter.py
functions/filters/debug_toggle_filter/: CHANGELOG.md  README.md  debug_toggle_filter.py
functions/filters/openai_responses_companion_filter/: CHANGELOG.md  README.md  openai_responses_companion_filter.py
functions/filters/prompt_enrichment_filter/: CHANGELOG.md  README.md  (+1 more)
functions/pipes/: DO NOT USE example_persist_custom_chat_metadata.py.example  PIPES_GUIDE.md  README.md  dynamic_title_update_demo.py  example_metadata_persistence.py  example_persist_custom_chat_metadata  example_persist_custom_chat_metadata.py  example_title_progress.py  metadata_demo.py  openai_responses_api_pipeline.py  openai_responses_pipeline.py
open-webui-reference/: API_FORMATS.md  EVENT_SYSTEM_EXPLAINED.md  OPEN_WEBUI_OVERVIEW.md  PIPELINE_EXPLAINED.md  TOOL_SYSTEM_EXPLAINED.md
openwebui_ext/: __init__.py
scripts/: publish_to_webui.py  startup.sh  test.sh
src/openwebui_devtoolkit/: __init__.py
system_prompts/: gpt-4.1.md  gpt-5-thinking.md
tests/: __init__.py  conftest.py  test_pipeline.py  test_publish.py
tools/: README.md
tools/microsoft_365_tool/: CHANGELOG.md  README.md  microsoft_365_tool.py
(+31 files in other folders)
