[project]
name = "openwebui-developer-toolkit"
version = "0.1.0"
description = "Self-contained Pipes, Filters & Tools for Open WebUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "fastapi",
  "pydantic",
  "requests"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "nox",
  "nano"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["functions", "tools", ".tests", ".scripts"]

[tool.setuptools.packages.find]
exclude = [
  "external*",
  "open-webui*",
  ".tests*"
]

[tool.pytest.ini_options]
# Only collect tests from our local ``tests`` directory
testpaths = [".tests"]
addopts = "-ra --import-mode=importlib --cov=openwebui_devtoolkit --cov-report=term-missing"
