[project]
name = "openwebui-developer-toolkit"
version = "0.1.0"
description = "Self-contained Pipes, Filters & Tools for Open WebUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "httpx-aiohttp",
  "fastapi",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["ALL"]
ignore = ["D203", "D212"]
fix = true
show-fixes = true
src = ["functions", "tools"]
extend-exclude = ["external", "open-webui"]

[tool.setuptools.packages.find]
exclude = [
  "external*",
  "open-webui*",
  ".tests*"
]

[tool.pytest.ini_options]
testpaths = ["functions"]            # let pytest recurse under functions/
python_files = "test_*.py"           # default, but explicit is nice
python_classes = ""                  # don’t require Test* classes
python_functions = "test_*"
norecursedirs = [
  "external",
  "open-webui",
  "*.egg-info",
  "dist",
  "build"
]
addopts = """
-ra
--import-mode=importlib
--cov=functions
--cov=tools
--cov-branch
--cov-report=term-missing
--asyncio-mode=auto
--color=yes
"""
pythonpath = ["external/open-webui/backend"]
